# KIV-ZOS

./: CMakeLists.txt  README.md  bool.h  boot_record.h  main.c  mft_fragment.h  mft_item.h  ntfs.c  ntfs.h  ntfs_commands.c  ntfs_commands.h  ntfs_logic.c  ntfs_logic.h  path_logic.c  path_logic.h  shell.c  shell.h  shell_app.c  shell_app.h  structure.c  structure.h  usefull_functions.c  usefull_functions.h
